# SlicerConnect

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  SlicerConnect.s4ext
CollaborativeSegmentation/: CMakeLists.txt  CollaborativeSegmentation.py  _api_client.py
CollaborativeSegmentation/Lib/: api_client.py  websocket_client.py
CollaborativeSegmentation/Resources/UI/: CollaborativeSegmentation.ui  project_selector_widget.ui
Login/: CMakeLists.txt  Login.py
Login/Resources/UI/: Login.ui
SlicerConnect/: CMakeLists.txt  SlicerConnect.py
SlicerConnect/Resources/UI/: SlicerConnect.ui
SlicerConnectEditor/: CMakeLists.txt  SlicerConnectEditor.py
SlicerConnectEditor/Resources/UI/: SlicerConnectEditor.ui
SlicerConnectLogin/: CMakeLists.txt  SlicerConnectLogin.py
SlicerConnectLogin/Resources/UI/: SlicerConnectLogin.ui
SyncData/: CMakeLists.txt  SyncData.py
SyncData/Resources/UI/: SyncData.ui
